# tuva-demo

./: README.md  pyproject.toml
analyses/: oncology_analysis.ipynb
models/oncology/: _oncology_models.yml
models/oncology/data_mart/dimensions/: dim_cancer_type.sql  dim_care_setting.sql  dim_patient.sql  dim_spend_bucket.sql
models/oncology/data_mart/facts/: fact_oncology_cost.sql
models/oncology/marts/: fact_oncology_cost_analytics.sql  fact_oncology_patient_detail.sql
models/oncology/staging/: stg_oncology_claims.sql  stg_oncology_conditions.sql
