[project]
name = "the-tuva-project-demo"
version = "0.1.9"
description = "Demo project for the Tuva Project using DuckDB"
requires-python = ">=3.11,<3.14"
dependencies = [
    "dbt-core>=1.8.0,<2.0.0",
    "dbt-duckdb>=1.8.0,<2.0.0",
    "numpy>=2.4.0",
    "pandas>=2.3.3",
]

[project.optional-dependencies]
dev = [
    "sqlfluff>=3.0.0",
    "sqlfluff-templater-dbt>=3.0.0",
]
